--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
             </div>
             <div class="player">
                 <div class="player-controls">
-                    <img src="Assets/player_icon1.png" class="player-control-icon">
-                    <img src="Assets/player_icon2.png" class="player-control-icon">
-                    <img src="Assets/player_icon3.png" class="player-control-icon" style="opacity: 1; height: 2rem;">
-                    <img src="Assets/player_icon4.png" class="player-control-icon">
-                    <img src="Assets/player_icon5.png" class="player-control-icon">
+                    <a href="#"><img src="Assets/player_icon1.png" class="player-control-icon"></a>
+                    <a href="#"><img src="Assets/player_icon2.png" class="player-control-icon"></a>
+                    <a href="#"><img src="Assets/player_icon3.png" class="player-control-icon" style="opacity: 1; height: 2rem;"></a>
+                    <a href="#"><img src="Assets/player_icon4.png" class="player-control-icon"></a>
+                    <a href="#"><img src="Assets/player_icon5.png" class="player-control-icon"></a>
 
                 </div>
                 <div class="playback-bar">
@@ -170,24 +170,3 @@
     </diV>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
